ZGC: Fix incorrect setup when using -XX:+UseTransparentHugePages

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 15
    • Affects Version/s: 15
    • Component/s: hotspot
    • gc
    • b24
    • Verified

      When using -XX:+UseTransparentHugePages, ZGC mistakenly calls madvise(..., MADV_HUGE); too late. The end result is that large pages are never allocated on first page fault, only via THP defrag. This in turn means that the majority of the heap will typically not be backed by large pages, which can have a very noticeable performance impact.

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Per Liden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: