8245106: ZGC: Fix incorrect setup when using -XX:+UseTransparentHugePages

Reviewed-by: stefank, eosterlund